# gemini-batch

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
gemini_batch/: __init__.py  aggregation.py  async_batch.py  batch.py  config.py  direct.py  embedding.py  types.py  utils.py
tests/: conftest.py  test_aggregation.py  test_async_batch.py  test_batch.py  test_direct.py  test_embedding.py  test_integration.py  test_integration_vertexai.py  test_utils.py  test_vertexai.py
